Update the project to the current version